*Empty MediaWiki Message*

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -141,22 +141,22 @@ By de eyrste race nå den sommerstop in Belgie, nam Hamilton de leiding van Rosb
 [[Bestaand:Lewis_Hamilton_2015_Malaysia_FP3_1.jpg|duum|Hamilton in den Grouten Prys van Maleysie van 2015]]
 Hamilton kon profiteren van nen vervölg van de dominantsy van Mercedes an et begin van et seisoon van 2015, as den nyen W06 Hybrid meyr ründjens voltoieden as elken anderen wågen en deed dat med mår eynen krachtbrun. By de oapeningsrace in Australie kwalificereden Hamilton sich vöär de eyrste startpositsy, 0,594 sekunden rapper as teammåt Rosberg en 1,391 sekunden vöär den Williams van Felipe Massa's Williams den as darden starteden. Hamilton wön vervölgens de race vöär Rosberg up de tweyde plåtse, med den Ferrari van Sebastian Vettel as darden up 34 sekunden achterstand. In Monako verlöär hy syne eyrste positsy an synen teammåt Rosberg nå 65 runden lang an de leiding van de race too hebben ereden döär nen fout den by den pitstop döär syn team was emåked, wårnå hy uutendelik dardes endigeden.
 [[Bestaand:Hamilton_Canada_2015.jpg|links|duum|Hamilton vyret syne oaverwinning in den Grouten Prys van Kanada van 2015]]
-Vöärafgånd an den Grouten Prys van Monako, kondigeden Mercedes an dat sy et konkrakt van Hamilton med drey jår hadden verlänged, wårmed hy töt et ende van et seisoon van 2018 by et team wyr ehölden. Hyrup volgeden månden van kontraktbesprekkingen den wyd epublisered wyren tüsken den koureur, den koos vöär sichself too underhandelen en et team. Den deal skynt meyr as £100 miljoon weerd too wean oaver de vülle drey jåren, wat Hamilton eyn van den bestbetålden koureurs in de Formule Eyn måket. Et wyr ok vermelded dat et verlängde kontrakt Hamilton et recht gav um syn eigen beyldrechten by too holden, wat as ungewöän wördet beskowed in den sport en um syne wågen wårmed hy kampioonskappen had ewönnen net as de troffeen dy hy versåmelet.
+Vöärafgånd an den Grouten Prys van Monako, kondigeden Mercedes an dat sy et konkrakt van Hamilton med drey jår hadden verlänged, wårmed hy töt et ende van et seisoon van 2018 by et team wyr ehölden. Hyrup volgeden månden van kontraktbesprekkingen den wyd epublisered wyren tüsken den koureur, den koos vöär sichself too underhandelen en et team. Den deal skynt meyr as £100 miljoon weerd too wean oaver de vülle drey jåren, wat Hamilton eynen van de bestbetålde koureurs in de Formule Eyn måket. Et wyr ok vermelded dat et verlängden kontrakt Hamilton et recht gav um syn eigen beyldrechten by too holden, wat as ungewöän wördet beskowed in den sport en um syne wågen wårmed hy kampioonskappen had ewönnen net as de troffeen dy hy versåmelet.
 
 Nå nen winlosen start an den europeesken tuur, wön Hamilton den britsken Grand Prix vöär de tweyde mål up nen ry en de darde mål in totål, wårmed hy ok et 45 jår olde rekord van Jackie Stewart van et antal rundes an de leiding ereden ehad hebben in achttyn upeynvölgende Groute Prys verbrak. Hy endigeden sesdes in nen hongaarsken Grand Prix wårin vöäl was eskeden, wat ok syne upeynvölging van 16 finishes up et podium up nen ry beendigeden, de up eyn nå langste in de geskydenis van de F1. Hamilton wön de völgende twey races in Spa en Monza en breidden syne leidende positsy oaver Nico Rosberg, den in de låtste race mos upgeaven vanweagen falen van den motor, uut når 53 pünten. By den singaporeesken Grand Prix, kön Hamilton sich as vyvden kwalificeren vöär teammåt Nico Rosberg en hy was uperükked når de veerde plåtse in de race vöärdat hy mos upgeaven vanweagen nen probleym med den krachtbrun. Med et winnen van den Grouten Prys van de Vereynigde Ståten versekereden Hamilton sich drey races vöär et ende van syn darden individuelen kampioonskap.
 
 ==== Et seisoon van 2016: Tweyds achter Rosberg ====
-At the season opening Australian Grand Prix, Hamilton qualified on pole. He made a poor start to the race, however, but recovered to finish second behind his Mercedes teammate Nico Rosberg.<ref>{{cite web|url=https://www.bbc.co.uk/sport/formula1/35850356|title=Lewis Hamilton on pole position in Australia after new F1 qualifying|work=BBC Sport|accessdate=26 March 2016}}</ref> In the second race of the season, the Bahrain Grand Prix, Hamilton again qualified on pole. On the first lap however there was a collision between him and Bottas, for which Bottas was handed a drive-through penalty.  Hamilton recovered to finish the race in third behind Rosberg and Räikkönen. In the next race, the Chinese Grand Prix, Hamilton did not set a time in qualifying and started at the back of the grid. He got as high up fifth but was overtaken by Räikkönen and Ricciardo near the end of the race to finish seventh. In the fourth race of the season, the Russian Grand Prix, Hamilton did not set a time in the third part of qualifying, meaning he started from tenth position on the grid. He finished second behind Rosberg, despite having zero water pressure for the last 16 laps.<ref>{{cite web|title=Mercedes write open letter to fans to silence conspiracy theories|url=http://www.skysports.com/f1/news/12472/10268836/mercedes-write-open-letter-to-fans-to-ward-off-conspiracy-theories|publisher=Sky Sports|accessdate=23 May 2016}}</ref>
+By de oapening van et seisoon, den australisken Grand Prix, kwalificereden Hamilton sich vöär de eyrste startpositsy. Skonwal had hy nen slechten start van de race mår hy herstelleden sich en endigeden tweyds achter synen Mercedesteammåt Nico Rosberg. In de tweyde race van et seisoon, den Grand Prix van Bahrein, kwalificereden Hamilton sich weaderum vöär de eyrste startpositsy. In de eyrste runde was der skonwal nen botsing tüsken hem en Bottas, wårvöär Bottas kreg nen strav wårby hy döär mocht ryden. Hamilton herstelleden sich en beendigeden de race as darden achter Rosberg en Räikkönen. In de völgende race, den chineesken Grand Prix, had Hamilton gin tyd neaderesetted in de kwalifikatsy en starteden hy achter in et startveld. Hy kwam tydens de race töt an de vyvde positsy mår wyr inehåled döär Räikkönen en Ricciardo teagen et ende van de race um as seavenden too endigen. In de veerde race van et seisoon, den rüssisken Grand Prix, had Hamilton gin tyd neaderesetted in et darden deal van de kwalifikatsy, wårdöär hy in tynde positsy starteden. Hy endigeden tweyds achter Rosberg, undanks dat hy nul wåterdrük had in de låtste 16 runden.
 
-In the next race in Spain, Hamilton claimed pole position, ahead of Rosberg. Both drivers made a good start, but Rosberg passed Hamilton around the outside of Turn 1. In the next few corners, Rosberg's car entered an incorrect engine mode due to an error the German had made on the formation lap. That meant he was slower than Hamilton coming out of Turn 3, and Hamilton went to overtake for the lead. Rosberg closed the door and forced Hamilton on to the grass where he lost control, eventually spinning into Rosberg and taking both drivers out of the race. The stewards deemed it a racing incident and decided Hamilton had been justified in his attempt as he was 17 kilometres per hour (11{{convert|17|km/h}} quicker than Rosberg coming out of Turn 3.<ref name="auto">{{Cite web|url=http://www.espn.co.uk/f1/story/_/id/16758147/a-line-lewis-hamilton-nico-rosberg-rivalry|title=Lewis Hamilton-Nico Rosberg rivalry: A timeline|date=5 July 2016|work=ESPN|access-date=10 August 2017|language=en-GB}}</ref> On the opening lap a collision between Hamilton and Rosberg meant that both Mercedes cars retired instantly. The stewards decided that the collision was a racing incident.<ref>{{cite web|last1=Gill|first1=Pete|last2=Galloway|first2=James|title=Lewis Hamilton and Nico Rosberg escape penalty after their race-ending Spanish GP crash|url=http://www.skysports.com/f1/news/12433/10282859/watch-lewis-hamilton-and-nico-rosberg-crash-out-of-spanish-gp|publisher=Sky Sports|accessdate=21 May 2018|archiveurl=https://web.archive.org/web/20160515202229/http://www.skysports.com/f1/news/12433/10282859/watch-lewis-hamilton-and-nico-rosberg-crash-out-of-spanish-gp|archivedate=15 May 2016|date=19 May 2016}}</ref>
-[[Bestaand:Hamilton_-_2016_Monaco_GP_02.jpg|links|duum|Hamilton on his way to victory at the 2016 Monaco Grand Prix]]
-Hamilton, now 43 points behind Rosberg, began to close the gap by winning in Monaco and Canada ahead of Daniel Ricciardo and Sebastian Vettel respectively, however a crash in qualifying at the next race in Baku and an engine mode setting problem meant that he was only able to finish 5th. Hamilton went on to win the Austrian Grand Prix despite having a last lap collision with Rosberg.<ref>{{Cite web|url=https://www.theguardian.com/sport/2016/jul/03/lewis-hamilton-nico-rosberg-f1-austrian-grand-prix|title=Lewis Hamilton wins Austrian Grand Prix after crash with Nico Rosberg|last=Richards|first=Giles|date=3 July 2016|website=the Guardian|access-date=5 July 2016}}</ref> A week later, Hamilton completed a hat-trick of home wins at the British Grand Prix, cutting his Mercedes teammate's championship lead to a point.<ref>{{Cite web|url=http://timesofindia.indiatimes.com/sports/racing/top-stories/Lewis-Hamilton-storms-to-British-Grand-Prix-victory/articleshow/53141624.cms|title=Lewis Hamilton storms to British Grand Prix victory – Times of India|access-date=12 July 2016}}</ref> He took the lead in the championship in the following race in Hungary, and extended the gap to 19 points after winning in Germany, where Rosberg finished fourth.<ref>{{cite web|url=https://www.formula1.com/en/results.html/2016/races/948/germany/race-result.html|title=Formula 1 Großer Preis von Deutschland 2016 – Race Result|website=Formula1.com|publisher=Formula One World Championship Limited|date=31 July 2016|accessdate=21 May 2018}}</ref>
+In de völgende race in Spanje leggeden Hamilton beslag up de eyrste startpositsy, vöär Rosberg. Beyde koureurs hadden nen gooden start, mår Rosberg håleden Hamilton in by de buutenkante van buchte 1. In de völgende pår buchten kwam den wågen van Rosberg terecht in nen inkorrekten stand van den motor vanweagen nen fout den den Düütsker had emåked in de  startrunde. Dat beteakeneden dat hy langsåmer as Hamilton uut buchte 3 kwam en Hamilton van hem de leiding oavernam. Rosberg blokkereden den döärgang en dwung Hamilton når et gras wår hy de kontrole verloor, hy dråieden når Rosberg too en dårdöär lagen beyde koureurs uut de race. De jüry sag et as nen raceincident en beslöät dat Hamilton gelyk had  med synen oavernåmepoging terwyl hy uutendelik 17 kilomeater per ure rapper uut buchte 3 kwam as Rosberg. De botsing tüsken Hamilton en Rosberg in de oapeningsrunde beteakeneden dat beyde Mercedeswågen sich direkt terügtrökken. De jüry beslöät achterav dat de botsing nen raceincident was.
+[[Bestaand:Hamilton_-_2016_Monaco_GP_02.jpg|links|duum|Hamilton underweg når de oaverwinning in den Grouten Prys van Monako van 2016]]
+Hamilton, den now 43 pünten achter Rosberg stond, begön et gat too oaverbrüggen döär in Monako en Kanada too winnen vöär respektivelik Daniel Ricciardo en Sebastian Vettel, mår nen ungeval in de kwalifikatsy van de race in Baku en nen probleym med de avstelling van den motor beteakeneden dat hy vyvdes endigeden. Hamilton wön vervölgens den oustenryksken Grand Prix undanks nen botsing med Rosberg in de låtste runde. Nen weak låter, måkeden Hamilton syn dreetal thuusoaverwinningen by den britsken Grand Prix kompleet, wårdöär synen teammåt by Mercedes noch med eyn pünt an de leiding van et kampioonskap stond. Hy kwam an de leiding in et kampioonskap in de völgende race in Hungary en vergröäteden synen vöärsprong når 19 pünten nå in Düütskland, wår Rosberg veerdes endigeden, too winnen.
 
-After the summer break, however, Hamilton's season unravelled. With Mercedes opting to take a series of grid penalties to build up a stockpile of components, Hamilton was forced to start in Belgium from 21st position. He took advantage of first-lap contact between Vettel, Räikkönen, and Verstappen to work his way through the field before a heavy accident involving Kevin Magnussen at Eau Rouge forced a red flag. When the race resumed, Nico Rosberg led the race until the chequered flag, while Hamilton ultimately finished third after being unable to catch Daniel Ricciardo.<ref>{{cite news|title=Lewis Hamilton finishes third from Belgian GP back row, Nico Rosberg wins|url=https://www.bbc.co.uk/sport/formula1/37209244|accessdate=1 December 2016|work=BBC Sport|date=28 August 2016}}</ref> Rosberg reduced Hamilton's championship lead to two points at the next round in Italy, taking advantage of a slow start from pole position by Hamilton to establish an early lead that went unchallenged through the race. Hamilton dropped as low as fifth at the start, recovering to fourth in the opening laps and using strategy to get ahead of the Ferraris of Vettel and Räikkönen.<ref>{{cite news|title=Lewis Hamilton battles to second as Nico Rosberg wins Italian Grand Prix|url=https://www.bbc.co.uk/sport/formula1/37270833|accessdate=1 December 2016|work=BBC Sport|date=4 September 2016}}</ref>
-[[Bestaand:Lewis_Hamilton_engine_failure_2016_Malaysian_GP_2.jpg|rechts|duum|Hamilton's engine failure in Malaysia was a key moment in the Drivers' Championship fight.]]
-Rosberg reclaimed the championship lead in Singapore, qualifying on pole while Hamilton was forced to settle for third after struggling with mechanical issues and driving errors.<ref>{{cite news|title=Nico Rosberg holds off Daniel Ricciardo in Singapore, with Lewis Hamilton third|url=https://www.bbc.co.uk/sport/formula1/37401119|accessdate=1 December 2016|work=BBC Sport|date=18 September 2016}}</ref> Hamilton looked set to regain the lead after comfortably leading the Malaysian Grand Prix, however he retired 16 laps from the end of the race with engine failure, leaving Daniel Ricciardo in control of the race, whilst Rosberg finished in third position, extending his championship lead to 23 points.<ref>{{cite news|title=Lewis Hamilton out in Malaysia as Daniel Ricciardo wins|url=https://www.bbc.co.uk/sport/formula1/37533163|accessdate=1 December 2016|work=BBC Sport|date=2 October 2016}}</ref>
+Mår nå den sommerstop verslechtereden et seisoon van Hamilton. Ümdat Mercedes koos ne party startstravven too aksepteren üm nye underdealen up te bowen, wyr Hamilton verplicht van de 21e positsy too starten in Belgie. Hy håleden vöärdeyl uut kontakt tüsken Vettel, Räikkönen en Verstappen in de eyrste runde döär sich når vöären too ryden in et veld tötdat nen swår ungeval by Eau Rouge wårby Kevin Magnussen betrökken was vöär nen rouden vlag sörgeden. Doo de race sich vöärsetteden, was Nico Rosberg an de leiding van de race töt an et ende by den eblökten vlag, terwyl Hamilton uutendelik as darden endigeden nådat hy Daniel Ricciardo neet had können inhålen. Rosberg verkleineden in de völgende race in Italie de leiding van Hamilton in et kampioonskap töt twey pünten, wårby hy vöärdeyl håleden uut den trågen start vanav de eyrste positsy van Hamilton en vrog de leiding nam dee neet meyr bedreiged wyr tydens de reste van de race. Hamilton veel by den start terüg töt de vyvde positsy, mår herstelleden sich in de oapeningsrunden når de veerde plekke en gebrukeden strategy um uutendelik vöär de Ferraris van Vettel en Räikkönen too endigen.
+[[Bestaand:Lewis_Hamilton_engine_failure_2016_Malaysian_GP_2.jpg|rechts|duum|Et fålen van den motor van Hamilton in Maleysie was nen belangryk moment in et gevecht üm et kampioonskap.]]
+Rosberg nam de leiding weader oaver in Singapore, den sich kwalificereden vöär de eyrste startpositsy terwyl Hamilton mos ryden vöär de darde positsy nådat hy mechanisken probleymen had ehad en ryfouten had emåked. Hamilton lek de leiding weader oaver too nemmen nå ruum an de leiding too hebben ereden in den maleysisken Grand Prix, mår hy gav up 16 runden vöär et ende van de race med fålen van den motor, wårdöär Daniel Ricciardo an de leiding kwam van de race, terwyl Rosberg dardes endigeden, wårmed hy syne leiding in et kampioonskap uutbreideden når 23 pünten.
 
-Rosberg further extended his championship lead to 33 points in Japan, starting the race from pole and finishing in first. Meanwhile, Hamilton made another poor start, slipping from second on the grid to eighth by the end of the first lap. He recovered with an alternate pit strategy to reclaim third place going into the final phase of the race but was unable to pass Max Verstappen, and finished in third, meaning that his deficit to Rosberg was now 33 points and that the Championship was no longer in his hands. The result secured Mercedes' third consecutive World Constructors' Championship title.<ref>{{cite news|title=Lewis Hamilton battles to third as Nico Rosberg wins in Japan|url=https://www.bbc.co.uk/sport/formula1/37595520|accessdate=1 December 2016|work=BBC Sport|date=9 October 2016}}</ref> Hamilton began to reduce Rosberg's lead, fronting a Mercedes 1–2 finish in the United States.<ref>{{cite news|title=Lewis Hamilton takes 50th win at United States GP|url=https://www.bbc.co.uk/sport/formula1/37746926|accessdate=1 December 2016|work=BBC Sport|date=23 October 2016}}</ref> Hamilton led another Mercedes 1–2 in Mexico and in Brazil, he dominated a heavily wet race to complete another hat-trick of wins. However, with Rosberg again finishing in second it meant that to win the championship, he would have to win the Abu Dhabi Grand Prix with Rosberg finishing fourth or lower.<ref>{{cite news|title=F1 title race goes to the wire in Abu Dhabi but will Red Bulls have a final say?|url=https://www.theguardian.com/sport/blog/2016/nov/23/f1-title-race-abu-dhabi-mercedes-hamilton-rosberg-red-bull|accessdate=21 May 2018|work=The Guardian|date=23 November 2016}}</ref>
+Rosberg breideden synen vöärsprong in et kampioonskap wyder uut når 33 points in Japan, wårby hy in de race in eyrste startpositsy vertrök en wön. Meanwhile, Hamilton made another poor start, slipping from second on the grid to eighth by the end of the first lap. He recovered with an alternate pit strategy to reclaim third place going into the final phase of the race but was unable to pass Max Verstappen, and finished in third, meaning that his deficit to Rosberg was now 33 points and that the Championship was no longer in his hands. The result secured Mercedes' third consecutive World Constructors' Championship title.<ref>{{cite news|title=Lewis Hamilton battles to third as Nico Rosberg wins in Japan|url=https://www.bbc.co.uk/sport/formula1/37595520|accessdate=1 December 2016|work=BBC Sport|date=9 October 2016}}</ref> Hamilton began to reduce Rosberg's lead, fronting a Mercedes 1–2 finish in the United States.<ref>{{cite news|title=Lewis Hamilton takes 50th win at United States GP|url=https://www.bbc.co.uk/sport/formula1/37746926|accessdate=1 December 2016|work=BBC Sport|date=23 October 2016}}</ref> Hamilton led another Mercedes 1–2 in Mexico and in Brazil, he dominated a heavily wet race to complete another hat-trick of wins. However, with Rosberg again finishing in second it meant that to win the championship, he would have to win the Abu Dhabi Grand Prix with Rosberg finishing fourth or lower.<ref>{{cite news|title=F1 title race goes to the wire in Abu Dhabi but will Red Bulls have a final say?|url=https://www.theguardian.com/sport/blog/2016/nov/23/f1-title-race-abu-dhabi-mercedes-hamilton-rosberg-red-bull|accessdate=21 May 2018|work=The Guardian|date=23 November 2016}}</ref>
 
 In Abu Dhabi, Hamilton took pole position ahead of Rosberg, and led him for most of the race.  In the final laps of the race, Hamilton defied team-orders, first from his race engineer and then by the team's technical director, and deliberately slowed to back Nico Rosberg into the chasing pack at end of the race in a bid to encourage rivals Vettel and Verstappen to overtake his teammate, which would have allowed him to win the World Championship.<ref name="auto1">{{Cite web|url=https://www.bbc.co.uk/sport/formula1/38145250|title=Hamilton did nothing wrong in Abu Dhabi decider|date=29 November 2016|work=BBC Sport|access-date=9 August 2017|language=en-GB}}</ref> However, Rosberg was able hold his position to take second place, enough to win the title with 385 points to Hamilton's 380. Pressed on whether Hamilton could face sanction or even suspension, Toto Wolff replied: "Everything is possible", although no punishment was publicly announced. Others have supported him, on the principle that "drivers are free to race". After the race, Hamilton denied that he had been guilty of any wrongdoing, saying "I don't think I did anything dangerous", "I was in the lead, so I control the pace. Those are the rules."<ref name="auto2">{{cite news|url=https://www.telegraph.co.uk/formula-1/2016/11/27/lewis-hamilton-could-suspended-mercedes-defying-team-orders/|title=Lewis Hamilton could be suspended by Mercedes for defying team orders during dramatic Abu Dhabi finale|date=29 November 2016|work=The Telegraph}}</ref><ref name="auto3">{{cite news|url=https://www.bbc.com/sport/formula1/38145250|title=Lewis Hamilton did nothing wrong in Abu Dhabi decider – BBC Sport|date=29 November 2016|work=BBC News}}</ref>
 
